--- a/e01.1 css basic/exercici1.html
+++ b/e01.1 css basic/exercici1.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercici</title>
+    <style>
+        .contenedor {
+            width: 200px;
+            height: 200px;
+            background-color: blue;
+            border: 5px solid black;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="contenedor"></div>
 </body>
 </html>
